# file_to_obj

./: CMakeLists.txt  README.md  main.cpp  test_c.cpp  test_cpp.cpp
.github/workflows/: main.yml
assets/: EmbedFileFTO.cmake
tests/c/: CMakeLists.txt  main.cpp
tests/cpp/: CMakeLists.txt  main.cpp
